# Moneta

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: 000_README_NOW  Codecs.md  CopyrightBanner.txt  Decoding.md  Descriptors.md  DevLog.md  Filters.md  Moneta.md  Operators.md  TODO  Traits.md  draft.md  entity_container_thoughts.txt  visitors.txt
include/: CMakeLists.txt
include/moneta/: end_entity  entity_container.hxx  make_entity.hxx  relational_container.hxx  relational_context.hxx
include/moneta/_aux/: mplx_at_c.hxx  mplx_flatten.hxx  mplx_nullref.hxx  mplx_remove_duplicates.hxx
include/moneta/algorithm/: dispatch_entity.hxx  for_each_member.hxx  hash.hxx  traverse.hxx  traverse_ng.hxx
include/moneta/codec/: buffered_decoder.hxx  codec_io.hxx  daisy_decoder.hxx  decode_many.hxx  decoder.hxx  decoder_ng.hxx  encoder.hxx  encoder_ng.hxx  for_each_member.hxx  group_decoder.hxx  multi_decoder.hxx  prefix.hxx  rawbin.hxx  typecode.hxx
include/moneta/container/: hash_state_tracker.hxx  meta_set.hxx  pk_tracker.hxx  rcontext.hxx  relational_container.hxx  rtuple_data.hxx  rtuple_set.hxx
include/moneta/detail/: keywords.hxx
include/moneta/lexical/: dispatch_entity.hxx  dispatch_member.hxx  set_value.hxx
include/moneta/limits/: member.hxx
include/moneta/meta/: member.hxx  member_name.hxx  member_names.hxx  member_pointers.hxx  members_of.hxx  tuple.hxx
include/moneta/pp/: apply_spec.hxx  boost_pp.hxx  core.hxx  describe_entity.hxx  entity_postparser.hxx  entity_preparser.hxx  moneta_pp.hxx  sql_entity.hxx
include/moneta/serialization/: for_each_member.hxx  iostream.hxx
include/moneta/sql/: describe_sql_entity.hxx
include/moneta/traits/: container.hxx  empty_pk.hxx  entity_group.hxx  entity_name.hxx  extract_pk.hxx  extract_pk_fwd.hxx  fixed_values.hxx  is_container.hxx  is_entity.hxx  member.hxx  member_name.hxx  member_names.hxx  member_ordinal.hxx  member_pointers.hxx  members.hxx  optional.hxx  pk.hxx  pk_fwd.hxx  pk_member_names.hxx  pk_or_type.hxx  pk_rtie.hxx  pk_rtuple.hxx  pk_tie.hxx  pk_tie_fwd.hxx  pk_tie_or_type.hxx  pk_type.hxx  pure_type.hxx  replace_entities_with.hxx  rtie.hxx  rtuple.hxx  same_pk.hxx  tie.hxx  to_entity.hxx  to_pk_rtuple.hxx  to_rtie.hxx  to_rtuple.hxx  to_tie.hxx  trait_array.hxx  tuple.hxx
test/db/: script.sql  test.db
test/moneta/: entity_container_test.cxx  interactive_shell_test.cxx  make_entity_test.cxx  relational_container_test.cxx  relational_context.cxx  relational_context_test.cxx  serial_sandbox.cxx  test_sandbox.cxx
test/moneta/_aux/: mplx_at_c_test.cxx  mplx_flatten.cxx
test/src/: interactive_shell_test.cxx
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  main.cxx  pch.hxx  stdafx.h
tests/core/moneta/: interactive_shell_test.cxx  make_entity_test.cxx  test_sandbox.cxx
tests/core/moneta/_aux/: mplx_at_c_test.cxx  mplx_flatten_test.cxx  mplx_remove_duplicates_test.cxx
tests/core/moneta/algorithm/: dispatch_entity_test.cxx  for_each_member_test.cxx  hash_test.cxx  traverse_ng_test.cxx  traverse_test.cxx
tests/core/moneta/algorithm/detail/: path_test.cxx
tests/core/moneta/codec/: buffered_decoder_test.cxx  codec_io_test.cxx  daisy_decoder_test.cxx  decoder_ng_test.cxx  decoder_test.cxx  encoder_ng_test.cxx  encoder_test.cxx  group_decoder_test.cxx  prefix_test.cxx
tests/core/moneta/codec/_aux/: codec_io_test.cxx  path_tabs_test.cxx  tabs_test.cxx
tests/core/moneta/codec/_aux/io/: copy_n_test.cxx  copy_string_test.cxx  copy_test.cxx  ostringstream_test.cxx  read_cstr_test.cxx  read_string_test.cxx  write_cstr_test.cxx  write_string_test.cxx
tests/core/moneta/codec/rawbin/: rawbin_decoder_test.cxx  rawbin_encoder_test.cxx
tests/core/moneta/codec/shell/: shell_decoder_test.cxx  shell_encoder_test.cxx
tests/core/moneta/codec/xml/: stateless_xml_decoder_test.cxx  stateless_xml_encoder_test.cxx  stateless_xml_test.cxx  xml_encoder_test.cxx  xml_traits_test.cxx
tests/core/moneta/codec/xml/detail/: xml_traits_test.cxx
tests/core/moneta/codec/xml/traits/: xml_traits_test.cxx
tests/core/moneta/container/: meta_set_test.cxx  rcontext_test.cxx  rtuple_set_test.cxx
tests/core/moneta/container/change_trackers/: bitset_change_tracker_test.cxx  hash_change_tracker_test.cxx
tests/core/moneta/container/load_trackers/: bitset_load_tracker_test.cxx
tests/core/moneta/lexical/: dispatch_member_test.cxx  lexical_dispatch_entity_test.cxx  set_value_test.cxx
tests/core/moneta/model/: Address.hxx  Cat.hxx  CatDataset.hxx  Composite.hxx  Customer.hxx  Dog.hxx  Hero.hxx  Lizard.hxx  Person.hxx  SportsTeam.hxx  big_entity_test.cxx  test_dataset.hxx
tests/core/moneta/model/simple/: Arithmetics.hxx  CascadedInts.hxx  FixedThreeInts.hxx  FourInts.hxx  ThreeInts.hxx  TwoInts.hxx
tests/core/moneta/model/tree/: A.hxx
tests/core/moneta/pp/: pp_test.cxx
tests/core/moneta/pp/detail/: cat_include_name_test.cxx  includer_test.cxx  includer_test_header.hxx
tests/core/moneta/serialization/soci/: soci_count_test.cxx  soci_create_test.cxx  soci_delete_test.cxx  soci_list_test.cxx  soci_read_test.cxx
tests/core/moneta/serialization/soci/detail/: soci_fixture.cxx  soci_fixture.hxx
tests/core/moneta/sql/generators/: delete_test.cxx  insert_test.cxx  select_test.cxx
tests/core/moneta/sql/traits/: field_names_test.cxx  table_name_test.cxx
tests/core/moneta/traits/: container_test.cxx  empty_pk_test.cxx  entity_group_test.cxx  extract_pk_test.cxx  fixed_values_test.cxx  is_container_test.cxx  is_entity_test.cxx  member_name_test.cxx  member_names_test.cxx  members_test.cxx  optional_test.cxx  pk_member_names_test.cxx  pk_rtie_test.cxx  pk_rtuple_test.cxx  pk_test.cxx  pk_tie_test.cxx  rtie_test.cxx  rtuple_test.cxx  tie_test.cxx  to_entity_test.cxx  to_pk_rtuple_test.cxx  to_rtie_test.cxx  to_rtuple_test.cxx  to_tie_test.cxx  trait_array_test.cxx  tuple_test.cxx
tests/core/moneta/traits/detail/: deref_if_unary_test.cxx  has_member_trait_test.cxx  indices_of_test.cxx  is_functor_callable_test.cxx  sub_tie_vector_test.cxx  tie_vector_test.cxx
tests/database/db/: script.sql
(+231 files in other folders)
