set(Boost_USE_STATIC_LIBS        ON)
set(Boost_USE_MULTITHREADED      ON)
set(Boost_USE_STATIC_RUNTIME    OFF)
find_package(Boost 1.55.0 COMPONENTS system thread test_exec_monitor REQUIRED)
if (Boost_FOUND)
	message(STATUS "Boost includes: ${Boost_INCLUDE_DIRS}")
	message(STATUS "Boost libs    : ${Boost_LIBRARIES}")
endif()

if(MSVC)
	#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /x /y /z")
else(MSVC)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++03 -stdlib=libc++ -Wall -Wextra -Os")
endif()

add_subdirectory(core)
